# SagesSTA

./: CMakeLists.txt  Makefile  Sages_2010  Sages_2010.pub  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ssd1306/: CMakeLists.txt  ssd1306_main.c  ssd1306_main.h
main/: CMakeLists.txt  Kconfig.projbuild  esp32_nat_router.c
main/AGS02MA/: ags02ma.c
main/AHT10/: aht10.c
main/dht11/: dht11_main.c
main/gpio5_relay/: gpio5_relay.c
main/include/: ags02ma.h  dht11_main.h  gpio5_relay.h  led_strip_main.h  ledc_main.h  mqtt_main.h  uart_echo.h
main/led/: led_strip_main.c
main/ledc/: ledc_main.c
main/mqtt/: mqtt_main.c
main/urat/: uart_echo.c
